syntax = "proto3";

import "core/core.proto";

package colonio.ColonioModuleProtocol;

message Call {
  uint32 opt = 1;
  string name = 2;
  core.Value value = 3;
}

message CallSuccess {
  core.Value result = 1;
}
